WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.h

HANDLE LCAPI lcDrwGetEntByIDH     (HANDLE hDrw, LPCWSTR szId);
HANDLE LCAPI lcDrwGetEntByKey     (HANDLE hDrw, int Key);
// View
BOOL   LCAPI lcViewSetRect        (HANDLE hView, double Xcen, double Ycen, double Width, double Height);
BOOL   LCAPI lcViewSetRect2       (HANDLE hView, double Lef, double Bot, double Rig, double Top);
BOOL   LCAPI lcViewSetLimits      (HANDLE hView, double Xmin, double Ymin, double Xmax, double Ymax);  // undoc
BOOL   LCAPI lcViewSetGrid        (HANDLE hView, double X0, double Y0, double dX, double dY);
BOOL   LCAPI lcViewRegen          (HANDLE hView, HANDLE hEnt);
BOOL   LCAPI lcViewSetPaperSize   (HANDLE hView, int PaperSize, int Orient, double Width, double Height);
HANDLE LCAPI lcViewGetEntByPoint  (HANDLE hView, double X, double Y, double Delta, int Mode);
int    LCAPI lcViewGetEntsByRect  (HANDLE hView, double Lef, double Bot, double Rig, double Top, BOOL bCross, int MaxNum);
HANDLE LCAPI lcViewGetEntity      (int iEnt);
BOOL   LCAPI lcViewRasterize      (HANDLE hView, LPCWSTR szFileName, double Lef, double Bot, double Rig, double Top, double Scal);
int    LCAPI lcViewRasterizeMem   (HANDLE hView, HANDLE hMem, double Lef, double Bot, double Rig, double Top, double Scal);
BOOL   LCAPI lcViewDrawMarker     (HANDLE hView, double X, double Y);   // !!! undoc
BOOL   LCAPI lcViewDrawLine       (HANDLE hView, double X0, double Y0, double X1, double Y1);  // !!! undoc
BOOL   LCAPI lcViewDrawXline      (HANDLE hView, double X0, double Y0, double X1, double Y1, BOOL bRay);  // !!! undoc
BOOL   LCAPI lcViewDrawRect       (HANDLE hView, double X0, double Y0, double X1, double Y1);  // !!! undoc
BOOL   LCAPI lcViewPrint          (HANDLE hView, HDC hPrintDC, double Lef, double Bot, double Rig, double Top, double Scal, double PapLef, double PapTop);
// Mline style
BOOL   LCAPI lcMLStyleAddLine   (HANDLE hStyle, double Offset, LPCWSTR szColor, HANDLE hLtype);
BOOL   LCAPI lcMLStyleDelLine   (HANDLE hStyle, int iLine);
BOOL   LCAPI lcMLStyleSortLines (HANDLE hStyle);
// Image 
BOOL   LCAPI lcImageSetPixelRGB (HANDLE hImage, int X, int Y, int Red, int Green, int Blue);
      
BOOL   LCAPI lcImageSetPixelI   (HANDLE hImage, int X, int Y, int iColor);
                        
BOOL   LCAPI lcImageGetPixelRGB (HANDLE hImage, int X, int Y, int* pRed, int* pGreen, int* pBlue);
BOOL   LCAPI lcImageGetPixelI   (HANDLE hImage, int X, int Y, int* piColor);
                      
BOOL   LCAPI lcImageSetPalColor (HANDLE hImage, int iColor, int Red, int Green, int Blue);
        
BOOL   LCAPI lcImageGetPalColor (HANDLE hImage, int iColor, int* pRed, int* pGreen, int* pBlue);
  
BOOL   LCAPI lcImageSetTranColor (HANDLE hImage, BOOL bTransparent, int Red, int Green, int Blue);
BOOL   LCAPI lcImageResize      (HANDLE hImage, int Width, int Height);
// Layer
BOOL   LCAPI lcLayerClear  (HANDLE hLayer, HANDLE hBlock);
// Add graphic objects into a block
BOOL   LCAPI lcBlockClear       (HANDLE hBlock, HANDLE hLayer);
BOOL   LCAPI lcBlockPurge       (HANDLE hBlock);
BOOL   LCAPI lcBlockSortEnts    (HANDLE hBlock, BOOL bByLayers);
HANDLE LCAPI lcBlockAddPoint    (HANDLE hBlock, double X, double Y);
HANDLE LCAPI lcBlockAddPoint2   (HANDLE hBlock, double X, double Y, int PtMode, double PtSize);
HANDLE LCAPI lcBlockAddXline    (HANDLE hBlock, double X, double Y, double Angle, BOOL bRay);
HANDLE LCAPI lcBlockAddXline2P  (HANDLE hBlock, double X, double Y, double X2, double Y2, BOOL bRay);
HANDLE LCAPI lcBlockAddLine     (HANDLE hBlock, double X1, double Y1, double X2, double Y2);
HANDLE LCAPI lcBlockAddLineDir  (HANDLE hBlock, double X, double Y, double Angle, double Dist);
HANDLE LCAPI lcBlockAddLineTan  (HANDLE hBlock, HANDLE hEnt1, HANDLE hEnt2, int Mode);
HANDLE LCAPI lcBlockAddPolyline (HANDLE hBlock, int FitType, BOOL bClosed, BOOL bFilled);
HANDLE LCAPI lcBlockAddSpline   (HANDLE hBlock, BOOL bClosed, BOOL bFilled);
HANDLE LCAPI lcBlockAddMline    (HANDLE hBlock, int FitType, BOOL bClosed);
HANDLE LCAPI lcBlockAddRect     (HANDLE hBlock, double Xc, double Yc, double Width, double Height, double Angle, BOOL bFilled);
HANDLE LCAPI lcBlockAddRect2    (HANDLE hBlock, double Left, double Bottom, double Width, double Height, double Rad, BOOL bFilled);
HANDLE LCAPI lcBlockAddCircle   (HANDLE hBlock, double X, double Y, double Radius, BOOL bFilled);
HANDLE LCAPI lcBlockAddArc      (HANDLE hBlock, double X, double Y, double Radius, double StartAngle, double ArcAngle);
HANDLE LCAPI lcBlockAddArc3P    (HANDLE hBlock, double X1, double Y1, double X2, double Y2, double X3, double Y3);
HANDLE LCAPI lcBlockAddEllipse  (HANDLE hBlock, double X, double Y, double R1, double R2, double RotAngle, double StartAngle, double ArcAngle);
HANDLE LCAPI lcBlockAddText     (HANDLE hBlock, LPCWSTR szText, double X, double Y);
HANDLE LCAPI lcBlockAddText2    (HANDLE hBlock, LPCWSTR szText, double X, double Y, int Align, double H, double WScale, double RotAngle, double Oblique);
HANDLE LCAPI lcBlockAddTextWin  (HANDLE hBlock, LPCWSTR szText, double X, double Y);
HANDLE LCAPI lcBlockAddTextWin2 (HANDLE hBlock, LPCWSTR szText, double X, double Y, int Align, double H, double WScale, double RotAngle, double Oblique);
HANDLE LCAPI lcBlockAddMText    (HANDLE hBlock, LPCWSTR szText, double X, double Y, double WrapWidth, int Align, double RotAngle, double H, double WScale);
HANDLE LCAPI lcBlockAddArcText  (HANDLE hBlock, LPCWSTR szText, double X, double Y, double Radius, double StartAngle, BOOL bClockwise, double H, double WScale, int Align);
HANDLE LCAPI lcBlockAddBlockRef (HANDLE hBlock, HANDLE hRefBlock, double X, double Y, double Scal, double Angle);
HANDLE LCAPI lcBlockAddBlockRefID  (HANDLE hBlock, int idRefBlock, double X, double Y, double Scal, double Angle);  // undoc