WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.vb


  Public Declare Unicode Function DrwGetEntByIDH Lib "Litecad.dll" Alias "lcDrwGetEntByIDH" (ByVal hDrw As Integer, ByVal szId As String) As Integer

  Public Declare Function DrwGetEntByKey Lib "Litecad.dll" Alias "lcDrwGetEntByKey" (ByVal hDrw As Integer, ByVal Key As Integer) As Integer

  Public Declare Function ViewSetRect Lib "Litecad.dll" Alias "lcViewSetRect" (ByVal hView As Integer, ByVal Xcen As Double, ByVal Ycen As Double, ByVal Width As Double, ByVal Height As Double) As Integer

  Public Declare Function ViewSetRect2 Lib "Litecad.dll" Alias "lcViewSetRect2" (ByVal hView As Integer, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double) As Integer

  Public Declare Function ViewSetLimits Lib "Litecad.dll" Alias "lcViewSetLimits" (ByVal hView As Integer, ByVal Xmin As Double, ByVal Ymin As Double, ByVal Xmax As Double, ByVal Ymax As Double) As Integer

  Public Declare Function ViewSetGrid Lib "Litecad.dll" Alias "lcViewSetGrid" (ByVal hView As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal dX As Double, ByVal dY As Double) As Integer

  Public Declare Function ViewRegen Lib "Litecad.dll" Alias "lcViewRegen" (ByVal hView As Integer, ByVal hEnt As Integer) As Integer

  Public Declare Function ViewSetPaperSize Lib "Litecad.dll" Alias "lcViewSetPaperSize" (ByVal hView As Integer, ByVal PaperSize As Integer, ByVal Orient As Integer, ByVal Width As Double, ByVal Height As Double) As Integer

  Public Declare Function ViewGetEntByPoint Lib "Litecad.dll" Alias "lcViewGetEntByPoint" (ByVal hView As Integer, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double, ByVal Mode As Integer) As Integer

  Public Declare Function ViewGetEntsByRect Lib "Litecad.dll" Alias "lcViewGetEntsByRect" (ByVal hView As Integer, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double, ByVal bCross As Integer, ByVal MaxNum As Integer) As Integer

  Public Declare Function ViewGetEntity Lib "Litecad.dll" Alias "lcViewGetEntity" (ByVal iEnt As Integer) As Integer

  Public Declare Unicode Function ViewRasterize Lib "Litecad.dll" Alias "lcViewRasterize" (ByVal hView As Integer, ByVal szFileName As String, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double, ByVal Scal As Double) As Integer

  Public Declare Function ViewRasterizeMem Lib "Litecad.dll" Alias "lcViewRasterizeMem" (ByVal hView As Integer, ByVal hMem As Integer, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double, ByVal Scal As Double) As Integer

  Public Declare Function ViewDrawMarker Lib "Litecad.dll" Alias "lcViewDrawMarker" (ByVal hView As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function ViewDrawLine Lib "Litecad.dll" Alias "lcViewDrawLine" (ByVal hView As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Integer

  Public Declare Function ViewDrawXline Lib "Litecad.dll" Alias "lcViewDrawXline" (ByVal hView As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal bRay As Integer) As Integer

  Public Declare Function ViewDrawRect Lib "Litecad.dll" Alias "lcViewDrawRect" (ByVal hView As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Integer

  Public Declare Function ViewPrint Lib "Litecad.dll" Alias "lcViewPrint" (ByVal hView As Integer, ByVal hPrintDC As Integer, ByVal Lef As Double, ByVal Bot As Double, ByVal Rig As Double, ByVal Top As Double, ByVal Scal As Double, ByVal PapLef As Double, ByVal PapTop As Double) As Integer

  Public Declare Unicode Function MLStyleAddLine Lib "Litecad.dll" Alias "lcMLStyleAddLine" (ByVal hStyle As Integer, ByVal Offset As Double, ByVal szColor As String, ByVal hLtype As Integer) As Integer

  Public Declare Function MLStyleDelLine Lib "Litecad.dll" Alias "lcMLStyleDelLine" (ByVal hStyle As Integer, ByVal iLine As Integer) As Integer

  Public Declare Function MLStyleSortLines Lib "Litecad.dll" Alias "lcMLStyleSortLines" (ByVal hStyle As Integer) As Integer

  Public Declare Function ImageSetPixelRGB Lib "Litecad.dll" Alias "lcImageSetPixelRGB" (ByVal hImage As Integer, ByVal X As Integer, ByVal Y As Integer, ByVal Red As Integer, ByVal Green As Integer, ByVal Blue As Integer) As Integer

  Public Declare Function ImageSetPixelI Lib "Litecad.dll" Alias "lcImageSetPixelI" (ByVal hImage As Integer, ByVal X As Integer, ByVal Y As Integer, ByVal iColor As Integer) As Integer

  Public Declare Function ImageGetPixelRGB Lib "Litecad.dll" Alias "lcImageGetPixelRGB" (ByVal hImage As Integer, ByVal X As Integer, ByVal Y As Integer, ByRef pRed As Integer, ByRef pGreen As Integer, ByRef pBlue As Integer) As Integer

  Public Declare Function ImageGetPixelI Lib "Litecad.dll" Alias "lcImageGetPixelI" (ByVal hImage As Integer, ByVal X As Integer, ByVal Y As Integer, ByRef piColor As Integer) As Integer

  Public Declare Function ImageSetPalColor Lib "Litecad.dll" Alias "lcImageSetPalColor" (ByVal hImage As Integer, ByVal iColor As Integer, ByVal Red As Integer, ByVal Green As Integer, ByVal Blue As Integer) As Integer

  Public Declare Function ImageGetPalColor Lib "Litecad.dll" Alias "lcImageGetPalColor" (ByVal hImage As Integer, ByVal iColor As Integer, ByRef pRed As Integer, ByRef pGreen As Integer, ByRef pBlue As Integer) As Integer

  Public Declare Function ImageSetTranColor Lib "Litecad.dll" Alias "lcImageSetTranColor" (ByVal hImage As Integer, ByVal bTransparent As Integer, ByVal Red As Integer, ByVal Green As Integer, ByVal Blue As Integer) As Integer

  Public Declare Function ImageResize Lib "Litecad.dll" Alias "lcImageResize" (ByVal hImage As Integer, ByVal Width As Integer, ByVal Height As Integer) As Integer

  Public Declare Function LayerClear Lib "Litecad.dll" Alias "lcLayerClear" (ByVal hLayer As Integer, ByVal hBlock As Integer) As Integer

  Public Declare Function BlockClear Lib "Litecad.dll" Alias "lcBlockClear" (ByVal hBlock As Integer, ByVal hLayer As Integer) As Integer

  Public Declare Function BlockPurge Lib "Litecad.dll" Alias "lcBlockPurge" (ByVal hBlock As Integer) As Integer

  Public Declare Function BlockSortEnts Lib "Litecad.dll" Alias "lcBlockSortEnts" (ByVal hBlock As Integer, ByVal bByLayers As Integer) As Integer

  Public Declare Function BlockAddPoint Lib "Litecad.dll" Alias "lcBlockAddPoint" (ByVal hBlock As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function BlockAddPoint2 Lib "Litecad.dll" Alias "lcBlockAddPoint2" (ByVal hBlock As Integer, ByVal X As Double, ByVal Y As Double, ByVal PtMode As Integer, ByVal PtSize As Double) As Integer

  Public Declare Function BlockAddXline Lib "Litecad.dll" Alias "lcBlockAddXline" (ByVal hBlock As Integer, ByVal X As Double, ByVal Y As Double, ByVal Angle As Double, ByVal bRay As Integer) As Integer

  Public Declare Function BlockAddXline2P Lib "Litecad.dll" Alias "lcBlockAddXline2P" (ByVal hBlock As Integer, ByVal X As Double, ByVal Y As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal bRay As Integer) As Integer

  Public Declare Function BlockAddLine Lib "Litecad.dll" Alias "lcBlockAddLine" (ByVal hBlock As Integer, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double) As Integer

  Public Declare Function BlockAddLineDir Lib "Litecad.dll" Alias "lcBlockAddLineDir" (ByVal hBlock As Integer, ByVal X As Double, ByVal Y As Double, ByVal Angle As Double, ByVal Dist As Double) As Integer

  Public Declare Function BlockAddLineTan Lib "Litecad.dll" Alias "lcBlockAddLineTan" (ByVal hBlock As Integer, ByVal hEnt1 As Integer, ByVal hEnt2 As Integer, ByVal Mode As Integer) As Integer

  Public Declare Function BlockAddPolyline Lib "Litecad.dll" Alias "lcBlockAddPolyline" (ByVal hBlock As Integer, ByVal FitType As Integer, ByVal bClosed As Integer, ByVal bFilled As Integer) As Integer

  Public Declare Function BlockAddSpline Lib "Litecad.dll" Alias "lcBlockAddSpline" (ByVal hBlock As Integer, ByVal bClosed As Integer, ByVal bFilled As Integer) As Integer

  Public Declare Function BlockAddMline Lib "Litecad.dll" Alias "lcBlockAddMline" (ByVal hBlock As Integer, ByVal FitType As Integer, ByVal bClosed As Integer) As Integer

  Public Declare Function BlockAddRect Lib "Litecad.dll" Alias "lcBlockAddRect" (ByVal hBlock As Integer, ByVal Xc As Double, ByVal Yc As Double, ByVal Width As Double, ByVal Height As Double, ByVal Angle As Double, ByVal bFilled As Integer) As Integer

  Public Declare Function BlockAddRect2 Lib "Litecad.dll" Alias "lcBlockAddRect2" (ByVal hBlock As Integer, ByVal Left As Double, ByVal Bottom As Double, ByVal Width As Double, ByVal Height As Double, ByVal Rad As Double, ByVal bFilled As Integer) As Integer

  Public Declare Function BlockAddCircle Lib "Litecad.dll" Alias "lcBlockAddCircle" (ByVal hBlock As Integer, ByVal X As Double, ByVal Y As Double, ByVal Radius As Double, ByVal bFilled As Integer) As Integer

  Public Declare Function BlockAddArc Lib "Litecad.dll" Alias "lcBlockAddArc" (ByVal hBlock As Integer, ByVal X As Double, ByVal Y As Double, ByVal Radius As Double, ByVal StartAngle As Double, ByVal ArcAngle As Double) As Integer

  Public Declare Function BlockAddArc3P Lib "Litecad.dll" Alias "lcBlockAddArc3P" (ByVal hBlock As Integer, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal X3 As Double, ByVal Y3 As Double) As Integer

  Public Declare Function BlockAddEllipse Lib "Litecad.dll" Alias "lcBlockAddEllipse" (ByVal hBlock As Integer, ByVal X As Double, ByVal Y As Double, ByVal R1 As Double, ByVal R2 As Double, ByVal RotAngle As Double, ByVal StartAngle As Double, ByVal ArcAngle As Double) As Integer

  Public Declare Unicode Function BlockAddText Lib "Litecad.dll" Alias "lcBlockAddText" (ByVal hBlock As Integer, ByVal szText As String, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Unicode Function BlockAddText2 Lib "Litecad.dll" Alias "lcBlockAddText2" (ByVal hBlock As Integer, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Align As Integer, ByVal H As Double, ByVal WScale As Double, ByVal RotAngle As Double, ByVal Oblique As Double) As Integer

  Public Declare Unicode Function BlockAddTextWin Lib "Litecad.dll" Alias "lcBlockAddTextWin" (ByVal hBlock As Integer, ByVal szText As String, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Unicode Function BlockAddTextWin2 Lib "Litecad.dll" Alias "lcBlockAddTextWin2" (ByVal hBlock As Integer, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Align As Integer, ByVal H As Double, ByVal WScale As Double, ByVal RotAngle As Double, ByVal Oblique As Double) As Integer

  Public Declare Unicode Function BlockAddMText Lib "Litecad.dll" Alias "lcBlockAddMText" (ByVal hBlock As Integer, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal WrapWidth As Double, ByVal Align As Integer, ByVal RotAngle As Double, ByVal H As Double, ByVal WScale As Double) As Integer

  Public Declare Unicode Function BlockAddArcText Lib "Litecad.dll" Alias "lcBlockAddArcText" (ByVal hBlock As Integer, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Radius As Double, ByVal StartAngle As Double, ByVal bClockwise As Integer, ByVal H As Double, ByVal WScale As Double, ByVal Align As Integer) As Integer

  Public Declare Function BlockAddBlockRef Lib "Litecad.dll" Alias "lcBlockAddBlockRef" (ByVal hBlock As Integer, ByVal hRefBlock As Integer, ByVal X As Double, ByVal Y As Double, ByVal Scal As Double, ByVal Angle As Double) As Integer

  Public Declare Function BlockAddBlockRefID Lib "Litecad.dll" Alias "lcBlockAddBlockRefID" (ByVal hBlock As Integer, ByVal idRefBlock As Integer, ByVal X As Double, ByVal Y As Double, ByVal Scal As Double, ByVal Angle As Double) As Integer
